@@ -6,7 +6,6 @@ sdistsrc={distshare}/tox-*
 
 [testenv]
 indexserver=http://pypi.testrun.org
-changedir=tests
 commands=
   py.test --junitxml={envlogdir}/junit-{envname}.xml []
 deps=pylib
